--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <mybatis.version>3.5.13</mybatis.version>
         <mybatis-spring.version>3.0.2</mybatis-spring.version>
         <postgresql.version>42.7.2</postgresql.version>
-        <jstl.version>1.2</jstl.version>
-        <servlet.version>4.0.1</servlet.version>
+        <jstl.version>2.0.0</jstl.version>
+        <servlet.version>6.1.0</servlet.version>
         <junit.version>5.10.0</junit.version>
         <java.version>21</java.version>
     </properties>
@@ -60,14 +60,14 @@
 
         <!-- Servlet & JSP API -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
             <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
             <version>${jstl.version}</version>
         </dependency>
 
@@ -110,6 +110,32 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.4.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven3-plugin</artifactId>
+                <version>1.10.4</version>
+                <configuration>
+                    <container>
+                        <containerId>tomcat10x</containerId>
+                        <type>embedded</type>
+                    </container>
+                    <configuration>
+                        <properties>
+                            <cargo.servlet.port>8080</cargo.servlet.port>
+                            <cargo.context>/bulletin</cargo.context>
+                        </properties>
+                    </configuration>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>start-container</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
