feat: separate BE and FE

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/bulletin_board
+jdbc.url=jdbc:postgresql://bulletin-postgres:5432/bulletin_board
 jdbc.username=postgres
 jdbc.password=password
